# doca-harness

./: CMakeLists.txt
src/: CMakeLists.txt  common.h
src/app/: CMakeLists.txt
src/app/chan/: CMakeLists.txt  ch_common.cc  ch_common.h  chan_client.cc  chan_server.cc
src/app/dma/: CMakeLists.txt  dma_client.cc  dma_common.cc  dma_common.h  dma_server.cc  dma_server_flat.cc
src/chan/: CMakeLists.txt  comm_channel.cc  comm_channel.h
src/dev/: CMakeLists.txt  device.cc  device.h
src/dma/: CMakeLists.txt  dma.cc  dma.h
src/mem/: CMakeLists.txt  mem.cc  mem.h
